# ninja-orval-forge

./: .gitignore  LICENSE  README-ja.md  README.md  pyproject.toml
ninja_orval_forge/: __init__.py  cli.py
ninja_orval_forge/analyzers/: __init__.py  django_analyzer.py  drf_analyzer.py
ninja_orval_forge/commands/: __init__.py  generate.py  init.py  migrate.py
ninja_orval_forge/config/: __init__.py  settings.py
ninja_orval_forge/generators/: __init__.py  api_generator.py
ninja_orval_forge/templates/django/: api.py.j2  base_schemas.py.j2  schema.py.j2  views.py.j2
ninja_orval_forge/templates/django/shared/: pagination_utils.py.j2
ninja_orval_forge/templates/django/utils/: pagination.py.j2
ninja_orval_forge/templates/typescript/: fetch_wrapper.ts.j2  orval.config.ts.j2  package_scripts.json.j2
ninja_orval_forge/templates/vue/: composable.ts.j2  list_component.vue.j2
ninja_orval_forge/utils/: __init__.py  file_manager.py
